# eslee-discord-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT_STATUS.md  MANUAL_TEST_PLAN.md  REQUIREMENTS.md  daily-summary.md  sqlite-to-postgres-migration.md
docs/codex-prompts/: company-pc-master-implementation.md
scripts/: install_scheduled_task.ps1  migrate_sqlite_to_postgres.py  run_bot.ps1
src/eslee_bot/: __init__.py  __main__.py  bot.py  config.py  logging_config.py  onekey_api.py
src/eslee_bot/cogs/: announcements.py  daily_summary.py  moderation.py  settings.py
src/eslee_bot/database/: __init__.py  migration.py  models.py  repositories.py  session.py
src/eslee_bot/services/: announcement_service.py  daily_summary.py  daily_summary_ai.py  daily_summary_runtime.py  moderation_service.py
src/eslee_bot/tasks/: announcement_scheduler.py  daily_summary_scheduler.py
src/eslee_bot/utils/: message_links.py  permissions.py  text.py  time.py
tests/: test_announcement_content.py  test_announcement_scheduler.py  test_bot_structure.py  test_config.py  test_daily_summary_ai.py  test_daily_summary_collection.py  test_daily_summary_commands.py  test_daily_summary_logic.py  test_daily_summary_reports.py  test_database_migration.py  test_forbidden_words.py  test_moderation_flow.py  test_onekey_api.py  test_permissions.py  test_postgresql_schema.py  test_repositories.py  test_scheduler_dispatch.py
